--- a/src/ModelOutput.css
+++ b/src/ModelOutput.css
@@ -18,6 +18,7 @@
     /* left: 0px; */
     /* top: 0px; */
     z-index: 10;
+    /* background-image: url("file:///C:\\Users\\ellyc\\OneDrive\\Desktop\\DATA451\\electron-demos\\my-app-demo\\public\\photos\\M12_2_Apr19_3.jpg") */
     
 }
 
